# Universal_Code_Mapper-Server

./: .gitignore  LICENSE  README.md  eval.xml  pyproject.toml  test_api.py  test_call.py  test_tool.py
src/ucm_mcp/: cli.py  config.py  identity.py  logger.py  main.py  server.py  web_socket_manager.py
src/ucm_mcp/analysis/: dead_code.py  export.py  impact.py
src/ucm_mcp/db/: connection.py  registry_schema.sql  repository.py  schema.sql
src/ucm_mcp/extraction/: calls.py  dependencies.py  inheritance.py  symbols.py
src/ucm_mcp/frameworks/: angular_plugin.py  base.py  django_plugin.py  dotnet_plugin.py  express_plugin.py  fastapi_plugin.py  flask_plugin.py  nestjs_plugin.py  react_plugin.py  spring_plugin.py  vue_router_plugin.py
src/ucm_mcp/indexing/: indexer.py
src/ucm_mcp/parsing/: engine.py
src/ucm_mcp/parsing/queries/: javascript_symbols.scm  python_symbols.scm
src/ucm_mcp/scanning/: file_scanner.py  language_detect.py
src/ucm_mcp/tools/: analysis_tools.py  framework_tools.py  graph_tools.py  overview_tools.py  project_tools.py  search_tools.py  test_tools.py
tests/: evaluations.md  test_extraction.py  test_identity.py  test_indexer.py  test_scanner.py
