[project]
name = "ucm-mcp"
version = "0.1.0"
description = "Universal Code Mapper - MCP server for AI-agent code navigation"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack",
    "watchfiles",
    "pathspec",
    "fastapi>=0.139.0",
    "fastmcp>=3.4.3",
]

[project.scripts]
ucm-mcp = "ucm_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ucm_mcp"]
