[project]
name = "ucm-mcp"
version = "0.1.9"
description = "Universal Code Mapper - MCP server for AI-agent code navigation"
readme = "README.md"
authors = [
    { name = "Tharindu Mendis" }
]
license = { text = "MIT" }
keywords = ["mcp", "code-mapper", "ast", "tree-sitter", "ai", "navigation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-language-pack>=1.9.1,<1.9.2",
    "watchfiles",
    "pathspec",
    "fastapi>=0.139.0",
    "fastmcp>=3.4.3",
]

[project.urls]
Homepage = "https://github.com/tharindumendis/Universal_Code_Mapper-Server"
Repository = "https://github.com/tharindumendis/Universal_Code_Mapper-Server.git"
Issues = "https://github.com/tharindumendis/Universal_Code_Mapper-Server/issues"

[project.scripts]
ucm-mcp = "ucm_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ucm_mcp"]
